--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
       </div>
       <nav class="header__nav nav">
         <ul class="nav__list">
+          <li><a href="#about">О нас</a></li>
           <!-- <li><a >Главная</a></li> -->
-          <li><a>Ассортимент</a></li>
+          <li><a href="#assortment">Ассортимент</a></li>
           <!-- <li><a>О нас</a></li> -->
-          <li><a>Акции</a></li>
+          <!-- <li><a>Акции</a></li> -->
           <!-- <li><a>Почему мы</a></li> -->
-          <li><a>Доставка</a></li>
+          <li><a href="#contact">Контакты</a></li>
           <li><a class="nav__tel" href="tel:+9292222222">+ (929) 222 – 22 – 22</a></li>
         </ul>
       </nav>
@@ -63,13 +64,13 @@
           <div class="intro__info fadeInDown">
             <h2 class="intro__title">Десерты<br>на любой вкус</h2>
             <p>Украшение вашего праздника по выгодной цене</p>
-            <button class="btn" aria-label="Заказать">Заказать</button>
+            <a href="#order" class="btn" aria-label="Заказать">Заказать</a>
           </div>
         </div>
     </section>
 
 
-    <section class="about">
+    <section class="about" id="about">
       <div class="about__block container">
         <div class="about__info">
           <h2 class="about__title">О нас</h2>
@@ -101,7 +102,7 @@
       </div>
     </section>
 
-    <section class="assortment">
+    <section class="assortment" id="assortment">
       <div class="assortment__block container">
         <h2 class="assortment__title">Ассортимент</h2>
         <ul class="assortment__list">
@@ -241,10 +242,10 @@
       </div>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
       <!-- <h2 class="visually-hidden">Как с нами связаться</h2> -->
 
-      <div class="contact__block container">
+      <div class="contact__block container" id="order">
         <div class="contact__wrap">
           <h3 class="contact__title">Хотите сделать заказ или у вас остались вопросы?</h3>
           <p>Закажите звонок и мы свяжемся с вами</p>
